[package]
name = "radio_player"
version = "0.1.0"
edition = "2021"


[dependencies]
fltk = { version = "^1.4", features = ["fltk-bundled"] }
radiobrowser = "*"
rodio = "0.17.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
stream-download = "0.4.2"
open = "5.0.1"
log = "0.4.20"
winapi = {version = "0.3", features = ["wincon", "winuser"] }


[build-dependencies]
winres = "0.1.12"


[profile.release]
# Set the target to GUI subsystem to prevent console from showing up
[targets."cfg(windows)"]
rustflags = ["-C", "link-args=/SUBSYSTEM:WINDOWS"]