[package]
name = "radio_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["fltk-bundled"] }
radiobrowser = "*"
rodio = "0.17.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
stream-download = "0.4.2"
open = "5.0.1"
log = "0.4.20"
minimp3 = "0.5.1"
anyhow = "1.0.79"